--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,25 +1,30 @@
-<!-- res/layout/login_layout.xml -->
+<!-- res/layout/registration_layout.xml -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".MainActivity">
+    tools:context=".SignUpActivity">
 
-    <!-- 아이디 입력 -->
     <EditText
-        android:id="@+id/editTextId"
+        android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="아이디"
+        android:hint="사용자 이름"
         android:inputType="text"
         android:layout_marginBottom="16dp"/>
 
-    <!-- 비밀번호 입력 -->
+    <EditText
+        android:id="@+id/editTextEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="이메일 주소"
+        android:inputType="textEmailAddress"
+        android:layout_marginBottom="16dp"/>
+
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
@@ -28,18 +33,10 @@
         android:inputType="textPassword"
         android:layout_marginBottom="16dp"/>
 
-    <!-- 로그인 버튼 -->
     <Button
-        android:id="@+id/buttonLogin"
+        android:id="@+id/buttonSignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그인"/>
-
-    <!-- 회원가입 버튼 -->
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="회원가입"
-        android:onClick="goToSignUp" />
+        android:text="회원가입"/>
 
 </LinearLayout>
