--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,4 +42,10 @@
         android:text="회원가입"
         android:onClick="goToSignUp" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="회원가입"
+        android:onClick="goToSignUp" />
+
 </LinearLayout>
