--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,24 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".SignUpActivity"
-    >
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="?attr/actionBarTheme"
-         />
-
-    <EditText
-        android:id="@+id/editTextUsername"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="사용자 이름"
-        android:inputType="text"
-        android:layout_marginBottom="16dp" />
+    tools:context=".RegisterActivity">
 
     <EditText
         android:id="@+id/editTextEmail"
@@ -31,6 +14,21 @@
         android:layout_height="wrap_content"
         android:hint="이메일 주소"
         android:inputType="textEmailAddress"
+        android:layout_marginBottom="16dp" />
+
+    <!-- 중복확인 버튼 추가 -->
+    <Button
+        android:id="@+id/buttonCheckDuplicate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="중복확인" />
+
+    <EditText
+        android:id="@+id/editTextUsername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="사용자 이름"
+        android:inputType="text"
         android:layout_marginBottom="16dp" />
 
     <EditText
