안드로이드 기능구현

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -5,30 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:padding="16dp"
+    android:gravity="center">
 
     <EditText
+        android:id="@+id/editTextName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edit_email"
-        android:hint="email 입력" />
+        android:hint="이름을 입력하세요" />
 
     <EditText
+        android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edit_password"
-        android:inputType="textPassword"
-        android:hint="password 입력" />
+        android:hint="아이디를 입력하세요" />
+
+    <EditText
+        android:id="@+id/editTextEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="이메일을 입력하세요"
+        android:inputType="textEmailAddress" />
 
     <Button
+        android:id="@+id/buttonResetPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그인"
-        android:id="@+id/btn_login" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="회원가입"
-        android:id="@+id/btn_register" /> <!-- 회원가입 버튼 추가 -->
+        android:text="비밀번호 재설정" />
 </LinearLayout>
