로그인 및 duplicated_network_task 처리 분리

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -126,6 +126,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/white_edittext"
             android:hint="비밀번호를 입력해주세요."
+            android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:textColor="#000000"
             android:textColorHint="#A0A0A0"
@@ -164,6 +165,7 @@
             android:layout_marginTop="32dp"
             android:background="@drawable/white_edittext"
             android:hint="비밀번호를 입력해주세요."
+            android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:textColor="#000000"
             android:textColorHint="#A0A0A0"
