--- a/app/src/main/res/drawable/button_half_radius_gray.xml
+++ b/app/src/main/res/drawable/button_half_radius_gray.xml
@@ -6,8 +6,6 @@
             android:shape="rectangle" android:padding = "10dp">
             <solid android:color="#BDBDBD"></solid>
                 <corners
-                    android:bottomLeftRadius="6dp"
-                    android:bottomRightRadius="6dp"
                     android:topLeftRadius="6dp"
                     android:topRightRadius="6dp"></corners>
                 <stroke android:width="2dp"
@@ -18,14 +16,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle" android:padding = "10dp">
-                <solid android:color="#5FBB5E"></solid>
+                <solid android:color="#AEAEAE"></solid>
                     <corners
-                        android:bottomLeftRadius="6dp"
-                        android:bottomRightRadius="6dp"
                         android:topLeftRadius="6dp"
                         android:topRightRadius="6dp"></corners>
                 <stroke android:width="2dp"
-                android:color="#5FBB5E"></stroke>
+                android:color="#AEAEAE"></stroke>
         </shape>
     </item>
     <!-- button_radius.xml -->
