--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,15 +13,15 @@
         android:paddingHorizontal="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
         tools:layout_editor_absoluteX="0dp">
 
         <TextView
-            android:id="@+id/textView_email"
+            android:id="@+id/textView_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="이메일"
+            android:text="아이디 *"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -29,28 +29,28 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editTextEmail"
+            android:id="@+id/editTextid"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
 
             android:background="@drawable/white_edittext"
-            android:hint="이메일을 입력해주세요."
+            android:hint="아이디 입력해주세요."
             android:paddingLeft="10dp"
             android:textColor="#000000"
             android:textColorHint="#A0A0A0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.4"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_email" />
+            app:layout_constraintTop_toBottomOf="@+id/textView_id" />
 
         <TextView
-            android:id="@+id/tv_error_email"
+            android:id="@+id/tv_error_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FF0000"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
+            app:layout_constraintTop_toBottomOf="@+id/editTextid"
             tools:text=" " />
 
 
@@ -59,12 +59,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="비밀번호"
+            android:text="비밀번호 *"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_error_email" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_error_id" />
 
         <EditText
             android:id="@+id/editTextPassword"
@@ -88,64 +88,89 @@
             android:textColor="#FF0000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
+            android:visibility="gone"
             tools:text=" " />
+
+        <TextView
+            android:id="@+id/forgotPasswordTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="240dp"
+            android:layout_marginTop="15dp"
+            android:clickable="true"
+            android:textStyle="bold"
+            android:onClick="launchForgotPasswordActivity"
+
+            android:text="아이디/비밀번호 찾기"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_error_password" />
+
         <Button
+            android:textColor="#FFFFFF"
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
             android:background="@drawable/button_radius"
-            android:layout_marginTop="15dp"
             android:text="로그인"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="147dp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintHorizontal_bias="0.575"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_error_password"/>
+            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView" />
 
-        <Button
-            android:id="@+id/btn_register"
-            android:layout_width="match_parent"
+        <CheckBox
+            android:id="@+id/saveIdCheckBox"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_radius"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="10dp"
+            android:checked="false"
+            android:text="아이디 저장"
+            android:textSize="12sp"
+
+            app:layout_constraintTop_toBottomOf="@+id/tv_error_password"
+            app:layout_constraintStart_toStartOf="parent"
+             />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="432dp"
+            android:text="아직 계정이 없으신가요?"
+            android:textColor="#000000"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="396dp"
+            android:layout_gravity="center"
+            android:background="@android:color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/btn_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="220dp"
+            android:layout_gravity="center"
+            android:clickable="true"
             android:text="회원가입"
-            tools:layout_editor_absoluteX="20dp"
-            tools:layout_editor_absoluteY="215dp"
-
-            android:layout_marginTop="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.4"
+            android:textStyle="bold"
+            android:onClick="launchsigupActivity"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login"/>
+            app:layout_constraintTop_toBottomOf="@+id/saveIdCheckBox" />
 
-        <Button
-            android:id="@+id/btn_find_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_radius"
-            android:text="아이디찾기"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="281dp"
-
-            android:layout_marginTop="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.4"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_register"/>
-
-        <Button
-            android:id="@+id/btn_find_pw"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_radius"
-            android:text="비밀번호 찾기"
-            tools:layout_editor_absoluteX="20dp"
-            tools:layout_editor_absoluteY="341dp"
-            android:layout_marginTop="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.4"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_find_id"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
