--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,16 +18,69 @@
         tools:layout_editor_absoluteX="0dp">
 
         <TextView
-            android:id="@+id/textView_email"
+            android:id="@+id/textView_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="이메일"
+            android:layout_marginTop="8dp"
+            android:text="아이디 *"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/editTextid"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+
+            android:background="@drawable/white_edittext"
+            android:hint="아이디를 입력해주세요."
+            android:paddingLeft="10dp"
+            android:textColor="#000000"
+            android:textColorHint="#A0A0A0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_id" />
+
+        <TextView
+            android:id="@+id/tv_error_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF0000"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextid"
+            android:visibility="gone"
+            tools:text=" " />
+
+
+        <!--중복확인 -->
+        <Button
+
+            android:id="@+id/buttonCheckDuplicate"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:hint="중복확인"
+            android:textColor="#000000"
+            android:enabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_error_id" />
+
+        <TextView
+            android:id="@+id/textView_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="이메일 *"
+            android:textColor="#000000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonCheckDuplicate"
+             />
 
         <EditText
             android:id="@+id/editTextEmail"
@@ -53,40 +107,26 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
             tools:text=" " />
 
-
-        <!--중복확인 -->
-        <Button
-            android:id="@+id/buttonCheckDuplicate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:background="@drawable/button_radius"
-            android:enabled="false"
-            android:text="중복확인"
-            app:layout_constraintTop_toBottomOf="@+id/tv_error_email"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="279dp" />
-
         <!--사용자이름 -->
         <TextView
             android:id="@+id/textView_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="사용자 이름"
+            android:text="이름 *"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonCheckDuplicate" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_error_email" />
 
         <EditText
             android:id="@+id/editTextUsername"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/white_edittext"
-            android:hint="사용자 이름을 입력해주세요."
+            android:hint="이름을 입력해주세요."
             android:paddingLeft="10dp"
             android:textColor="#000000"
             android:textColorHint="#A0A0A0"
@@ -112,7 +152,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="비밀번호"
+            android:text="비밀번호 * "
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -123,7 +163,7 @@
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/white_edittext"
             android:hint="비밀번호를 입력해주세요."
             android:inputType="textPassword"
@@ -151,7 +191,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="비밀번호 확인"
+            android:text="비밀번호 확인 *"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -162,7 +202,7 @@
             android:id="@+id/editTextPassword_check"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/white_edittext"
             android:hint="비밀번호를 입력해주세요."
             android:inputType="textPassword"
@@ -183,18 +223,113 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextPassword_check"
             tools:text=" " />
 
-        <Button
-            android:id="@+id/buttonSignUp"
+
+        <!-- 텍스트 -->
+
+        <CheckBox
+            android:id="@+id/myCheckBox1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="아래 약관에 모두 동의합니다."
+            android:textSize="19sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_error_password_check"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <CheckBox
+            android:id="@+id/myCheckBox2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="false"
+
+            android:layout_marginTop="2dp"
+            android:text="[필수] 이용약관 필수 동의 자세히 보기"
+            android:textSize="15sp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/myCheckBox1"
+            app:layout_constraintVertical_bias="0.0" />
+        <!-- Todo:
+        하이퍼 링크로 자세히 보기 연결하기 -->
+
+        <CheckBox
+            android:id="@+id/myCheckBox3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:layout_marginTop="2dp"
+            android:layout_marginStart="15dp"
+            android:text="[필수] 개인정보 처리방침 필수 동의 자세히 보기"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/myCheckBox2"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <CheckBox
+            android:id="@+id/myCheckBox4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:layout_marginTop="2dp"
+            android:layout_marginStart="15dp"
+            android:text="[필수] 위치정보 이용 약관 필수 동의 자세히 보기"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/myCheckBox3"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <CheckBox
+            android:id="@+id/myCheckBox5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:checked="false"
+            android:layout_marginTop="2dp"
+            android:text="[필수] 만 14세 이상임에 필수 동의 자세히 보기"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/myCheckBox4"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <CheckBox
+            android:id="@+id/myCheckBox6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="2dp"
+            android:text= "[선택] 마케팅 정보 수신 선택 동의 자세히 보기"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/myCheckBox5"
+            app:layout_constraintVertical_bias="0.0" />
+
+
+        <Button
+            android:textSize="20sp"
+            android:textColor="#FFFFFF"
+            android:id="@+id/buttonSignUp"
+            android:layout_width="match_parent"
+            android:layout_marginStart="15dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@drawable/button_radius"
             android:enabled="false"
             android:text="회원가입"
-            app:layout_constraintTop_toBottomOf="@+id/tv_error_password_check"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="538dp" />
+            app:layout_constraintTop_toBottomOf="@+id/myCheckBox6"
+            tools:layout_editor_absoluteX="20dp"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
