--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,13 @@
         <!-- 다른 스타일 속성들... -->
         <item name="popupTheme">@style/AppTheme.PopupOverlay</item>
     </style>
-
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
         <!-- PopupOverlay 관련 스타일 속성 설정 -->
     </style>
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <!-- 다른 속성들을 원하면 여기에 추가할 수 있습니다. -->
+    </style>
+
 </resources>
