--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
 
     <ImageView
         android:id="@+id/logoImageView"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="847dp"
         android:layout_centerInParent="true"
         android:scaleType="centerCrop"
