아이디 찾기 화면에서 비밀번호 찾기 버튼 클릭시 화면 꺼짐 해결

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -96,7 +96,7 @@
             android:textColor="#FF0000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextid"
-            tools:text=" " />
+            android:visibility="gone"/>
         <TextView
             android:id="@+id/textView_name"
             android:layout_width="wrap_content"
@@ -132,7 +132,7 @@
             android:textColor="#FF0000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextName"
-            tools:text=" " />
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/textView_email"
@@ -167,7 +167,7 @@
             android:textColor="#FF0000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
-            tools:text=" " />
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/textView_VerificationCode"
