--- a/app/src/main/res/layout/activity_find_id.xml
+++ b/app/src/main/res/layout/activity_find_id.xml
@@ -33,7 +33,7 @@
             tools:layout_editor_absoluteY="16dp" />
 
         <Button
-            android:id="@+id/btn_resetPassword"
+            android:id="@+id/btn_resetPassword2323"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="192dp"
@@ -41,7 +41,7 @@
             android:text="       비밀번호 찾기      "
             android:textColor="#FFFFFF"
             android:textSize="20sp"
-
+            android:onClick="resetPasswordButtonClick"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteY="16dp" />
