센서 등록 화면 전환 구현 want : home -> 센서 제어 현 상황 : 센서 제어 intent 넘어가지 않고 로그인 창으로 넘어가는 상황

--- a/app/src/main/res/layout/sensor_control_1.xml
+++ b/app/src/main/res/layout/sensor_control_1.xml
@@ -7,10 +7,8 @@
     android:background="#FFFF"
     >
 
-
-
     <TextView
-        android:id="@+id/textView_name"
+        android:id="@id/textView_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -23,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextName"
+        android:id="@id/editTextName"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
@@ -78,6 +76,22 @@
         app:layout_constraintTop_toBottomOf="@+id/textView_email" />
 
     <Button
+        android:id="@+id/btn_find_id3"
+        android:layout_width="109dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="432dp"
+        android:background="@drawable/button_half_radius_gray"
+        android:text="인증하기"
+        android:textColor="#FFFFFF"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.978"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/btn_finish"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -92,21 +106,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/btn_find_id3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="430dp"
-        android:background="@drawable/button_radius"
-        android:text="인증하기"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
